@@ -9,7 +9,7 @@ Version 2.18.1
 
 * The following bugs are resolved with this release:
 
-  15073, 15128, 15909, 15996, 16150, 16169, 16387.
+  15073, 15128, 15909, 15996, 16150, 16169, 16387, 16510.
 
 Version 2.18
 
